Emit error result when address is invalid.